# jirha

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.json
.claude-plugin/: hooks.json  marketplace.json  plugin.json
.claude/commands/: jirha-hygiene.md  jirha-transition.md  jirha-update.md
.github/workflows/: ci.yml
commands/: create.md  estimate-batch.md  estimate.md  hygiene-check-sp.md  hygiene.md  list.md  meta.md  pr-dashboard.md  quarterly-connections.md  short-sprint-status.md  show.md  sprint-status-short.md  sprint-status.md  transition.md  update.md
docs/: jira-reference.md  pantheon-reference.md  sp-heuristics.md
docs/superpowers/: pr_sp_data.csv  pr_sp_data_2025.csv
docs/superpowers/plans/: 2026-03-30-best-practices-refactor.md  2026-04-03-sp-estimation-skill.md  2026-04-07-batch-estimate.md
docs/superpowers/specs/: 2026-03-30-best-practices-refactor-design.md  2026-04-03-sp-estimation-skill-design.md  2026-04-07-batch-estimate-design.md  (+4 more)
hooks/: hooks.json
jirha/: api.py  cache.py  cli.py  config.py
jirha/ops/: context.py  estimate.py  hygiene.py  issues.py  meta.py  quarterly.py  sprint.py
scripts/: derive_thresholds.py  jirha  pantheon-cli  setup.sh  visual-diff
scripts/hooks/: post-pr.sh  pre-commit.sh
skills/: hygiene-check-sp.md  jira-workflow.md
tests/unit/: test_cache.py  test_config.py  test_context.py  test_estimate.py  test_hygiene.py  test_issues.py  test_pr_status.py  test_quarterly.py  test_sp.py  test_sprint.py
